IE 10/11 fix to prevent content from overflowing in media block
per https://github.com/washington-leadership-academy/wla/issues/15#issuecomment-214870808

--- a/src/assets/scss/components/_mediablock.scss
+++ b/src/assets/scss/components/_mediablock.scss
@@ -73,6 +73,11 @@
     @media #{$large-up} {
         flex: 2;
     }
+
+    // IE fix to prevent content from overflowing
+    .media-highlight__content-wrapper {
+        max-width: 100%;
+    }
 }
 
 .media-callout {
